python-compiler/tests/snapshots/input__input_basic.snap
---
source: tests/input.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@scanf_float_format_string = private unnamed_addr constant [4 x i8] c"%lf\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

define i32 @main() {
entry:
  %x = alloca double, align 8
  %input_tmp = alloca double, align 8
  %scanf_call = call i32 (ptr, ...) @scanf(ptr @scanf_float_format_string, ptr %input_tmp)
  %input_value = load double, ptr %input_tmp, align 8
  store double %input_value, ptr %x, align 8
  %x1 = load double, ptr %x, align 8
  %printf_call = call i32 (ptr, ...) @printf(ptr @float_format_string, double %x1)
  ret i32 0
}

declare i32 @scanf(ptr, ...)

declare i32 @printf(ptr, ...)
