python-compiler/tests/snapshots/input__multiple_inputs.snap
---
source: tests/input.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@scanf_float_format_string = private unnamed_addr constant [4 x i8] c"%lf\00", align 1
@scanf_float_format_string.1 = private unnamed_addr constant [4 x i8] c"%lf\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1

define i32 @main() {
entry:
  %y = alloca double, align 8
  %x = alloca double, align 8
  %input_tmp = alloca double, align 8
  %scanf_call = call i32 (ptr, ...) @scanf(ptr @scanf_float_format_string, ptr %input_tmp)
  %input_value = load double, ptr %input_tmp, align 8
  store double %input_value, ptr %x, align 8
  %input_tmp1 = alloca double, align 8
  %scanf_call2 = call i32 (ptr, ...) @scanf(ptr @scanf_float_format_string.1, ptr %input_tmp1)
  %input_value3 = load double, ptr %input_tmp1, align 8
  store double %input_value3, ptr %y, align 8
  %x4 = load double, ptr %x, align 8
  %y5 = load double, ptr %y, align 8
  %addtmp = fadd double %x4, %y5
  %printf_call = call i32 (ptr, ...) @printf(ptr @float_format_string, double %addtmp)
  ret i32 0
}

declare i32 @scanf(ptr, ...)

declare i32 @printf(ptr, ...)
